...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextAppearance="@style/Toolbar.TitleText" />

        <TextView
            android:id="@+id/tvJobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/title"
            android:textColor="@color/black"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobDescription" />

        <TextView
            android:id="@+id/tvJobAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_job_address_title"
            android:textColor="@color/black"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobIndustryType" />

        <TextView
            android:id="@+id/tvJobType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_job_type_title"
            android:textColor="@color/black"
...
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvJobType" />

        <TextView
            android:id="@+id/tvJobSalary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_salary_opsional"
            android:textColor="@color/black"
...
                android:layout_marginStart="@dimen/margin_16dp"
                android:checked="true"
                android:text="@string/txt_no" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvAdditionalInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/txt_additional_information"
            android:textColor="@color/black"
...
