<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/ic_home_gray_24dp" />

    <item
        android:id="@+id/job"
        android:title="@string/job"
        android:icon="@drawable/ic_job_gray_24dp" />

    <item
        android:id="@+id/notification"
        android:title="@string/notification"
        android:icon="@drawable/ic_notification_gray_24dp" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile_gray_24dp" />
</menu>