...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJobAddress"
        tools:text="Full time \u2022 Remote" />

    <TextView
        android:id="@+id/tvJobPostedDateAndApplicants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_4dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/darkGray"
        android:textSize="13.5sp"
...
