...
    <string name="create_job_title">Tambahkan pekerjaan</string>
    <string name="edit_job_title">Ubah pekerjaan</string>
    <string name="role">Role</string>
    <string name="txt_sign_up_headline">Bergabung sekarang di Dissajob</string>
    <string name="masuk">Masuk</string>
    <string name="email_invalid">Email tidak valid</string>
    <string name="error_login">Email/Password anda salah</string>
    <string name="recruiter_name">%1$s %2$s</string>
    <string name="profile_header_heading">Akun Saya</string>
    <string name="success_signup">Silahkan lakukan verifikasi email</string>
    <string name="email_is_not_verified">Silahkan lakukan verifikasi email terlebih dahulu</string>
    <string name="success_post_job">Pekerjaan berhasil ditambahkan</string>
    <string name="success_update_job">Pekerjaan berhasil diubah</string>
    <string name="failure_post_job">Pekerjaan gagal ditambahkan</string>
    <string name="loading">Loading</string>
    <string name="open_status">Open</string>
    <string name="closed_status">Closed</string>
...
